fix navbar logo alignment

--- a/less/laeknaromur.less
+++ b/less/laeknaromur.less
@@ -346,7 +346,7 @@ ul {
     height: 30px;
 }
 .logo-all {
-    margin: -1.5% 0 0 5%;
+    // margin: -1.5% 0 0 5%;
     padding: 0;
 }
 .lang-img {
